--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     <p id="para">
       We’re cooking up something awesome here. <br />
       Hold tight — it'll be worth the wait! <br />
-      The project is still in development, and we appreciate your patience.
+      The project is still in development, and we appreciate your patience. <br/>
+      <a href='https://github.com/ajey108/SyncTalk'>ViewProject</a>
+
     </p>
     <a href="https://ajay108portfolio.netlify.app/">Go Back Home</a>
   </body>
